force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__Bcc__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Bcc__c</fullName>
    <label>Bcc</label>
    <length>80</length>
    <type>Text</type>
</CustomField>