force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__BodyForFax__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__BodyForFax__c</fullName>
    <label>Body(FAX)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>