force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__BodyForMail__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__BodyForMail__c</fullName>
    <label>Body(Mail)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>