force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__ButtonUpdateConditions__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__ButtonUpdateConditions__c</fullName>
    <label>ButtonUpdateConditions</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>