force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__D3WorkerExecutionHistory__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__D3WorkerExecutionHistory__c</fullName>
    <label>Linkage History</label>
    <length>60</length>
    <type>Text</type>
</CustomField>