force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__D3WorkerWorkName__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__D3WorkerWorkName__c</fullName>
    <label>Work Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>