force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__D3WorkerWorkParameters__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__D3WorkerWorkParameters__c</fullName>
    <label>Work Parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>