force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__DetailObject1__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__DetailObject1__c</fullName>
    <label>Detail Object 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>