force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__DetailObject1ChildRelationName__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__DetailObject1ChildRelationName__c</fullName>
    <label>DetailObject1ChildRelationName</label>
    <length>60</length>
    <type>Text</type>
</CustomField>