force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__DetailObject2__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__DetailObject2__c</fullName>
    <label>Detail Object 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>