force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__DetailObject2ApiName__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__DetailObject2ApiName__c</fullName>
    <label>Detail Object 2 Api Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>