force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__DetailObjectForView__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__DetailObjectForView__c</fullName>
    <formula>IF(NOT(ISBLANK(docutizexa__DetailObject1__c)), docutizexa__DetailObject1__c, &quot;&quot;) &amp; IF(NOT(ISBLANK(docutizexa__DetailObject2__c)), &quot;, &quot; &amp; docutizexa__DetailObject2__c, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detail Object</label>
    <type>Text</type>
</CustomField>