force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__DocutizeOrOproarts__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__DocutizeOrOproarts__c</fullName>
    <label>docutize Or Oproarts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>