force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__ErrorConditions__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__ErrorConditions__c</fullName>
    <label>Error Conditions</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>