force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__MasterObject__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__MasterObject__c</fullName>
    <label>Master Object</label>
    <length>40</length>
    <type>Text</type>
</CustomField>