force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__MasterObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__MasterObjectApiName__c</fullName>
    <label>Master Object Api Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>