force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__memo__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__memo__c</fullName>
    <label>メモ</label>
    <type>TextArea</type>
</CustomField>