force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__MultiTemplateConditions__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__MultiTemplateConditions__c</fullName>
    <label>Multi Template Conditions</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>