force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__NoNeedSpecifyId__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__NoNeedSpecifyId__c</fullName>
    <defaultValue>false</defaultValue>
    <description>trueかつ一覧型の場合、出力時のId指定を不要にする。
当項目がtrueかつ抽出条件が空の場合、全レコードを抽出対象となる。</description>
    <label>No Need Specify Id</label>
    <type>Checkbox</type>
</CustomField>