force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__OutputMethod__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__OutputMethod__c</fullName>
    <label>Output Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>