force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__PicklistValueType__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__PicklistValueType__c</fullName>
    <label>選択リスト項目の獲得内容</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>api</fullName>
                <default>true</default>
                <label>API参照名</label>
            </value>
            <value>
                <fullName>label</fullName>
                <label>ラベル</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>