force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__SoqlWhere1__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__SoqlWhere1__c</fullName>
    <label>SoqlWhere1</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>