force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__SoqlWhere2__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__SoqlWhere2__c</fullName>
    <label>SoqlWhere2</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>