force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__SortConditions__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__SortConditions__c</fullName>
    <label>Sort Conditions</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>