force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__SortOrder1__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__SortOrder1__c</fullName>
    <label>SortOrder1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>