force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__SortOrder2__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__SortOrder2__c</fullName>
    <label>SortOrder2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>