force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__Status__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Status__c</fullName>
    <label>Status</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>