force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__SubjectForFax__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__SubjectForFax__c</fullName>
    <label>Subject(FAX)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>