force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__SubjectForMail__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__SubjectForMail__c</fullName>
    <label>Subject(Mail)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>