force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__To__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__To__c</fullName>
    <label>To</label>
    <length>80</length>
    <type>Text</type>
</CustomField>