force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__Type__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>