force-app/main/default/objects/docutizexa__Report__c/fields/docutizexa__VisualforcePDFName__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__VisualforcePDFName__c</fullName>
    <label>Visualforce PDF Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>