force-app/main/default/objects/docutizexa__Report__c/validationRules/docutizexa__checkDuplicateNameRule.validationRule-meta.xml
<ValidationRule>
    <fullName>docutizexa__checkDuplicateNameRule</fullName>
    <active>true</active>
    <description>レコード新規作成・更新時にNameが重複する場合はエラーとする</description>
    <errorConditionFormula>(Name = VLOOKUP(
    $ObjectType.docutizexa__Report__c.Fields.Name,
    $ObjectType.docutizexa__Report__c.Fields.Name,
    Name
) &amp;&amp; ( ISNEW()  ||  ISCHANGED(Name) ))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Duplicate report name. Change report name, and, save it again.</errorMessage>
</ValidationRule>