force-app/main/default/objects/docutizexa__Report__c/listViews/docutizexa__View.listView-meta.xml
<ListView>
    <fullName>docutizexa__View</fullName>
    <columns>NAME</columns>
    <columns>docutizexa__DocutizeOrOproarts__c</columns>
    <columns>docutizexa__OutputFormat__c</columns>
    <columns>docutizexa__OutputMethod__c</columns>
    <columns>docutizexa__Type__c</columns>
    <columns>docutizexa__MasterObject__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>すべて</label>
</ListView>